--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.watchstoreapp"
+        applicationId 'com.example.examarble'
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
