--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.examarble">
+          package="com.example.watchstoreapp">
 
     <application
-            android:name="com.example.examarble.container.BaseApplication"
+            android:name=".container.BaseApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.NavigationDrawerExampleNew">
-        <activity android:name="com.example.examarble.Activities.SignUpActivity"
+        <activity android:name=".Activities.SignUpActivity"
                   android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
         </activity>
-        <activity android:name="com.example.examarble.Activities.LoginActivity"
+        <activity android:name=".Activities.LoginActivity"
                   android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -22,14 +22,14 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.example.examarble.Activities.DashboardActivity"
+                android:name=".Activities.DashboardActivity"
                 android:label="@string/app_name"
                 android:launchMode="singleTask"
                 android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
 
         </activity>
         <activity
-                android:name="com.example.examarble.Activities.FullScreenActivity"
+                android:name=".Activities.FullScreenActivity"
                 android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
         </activity>
     </application>
