--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,12 @@
 
         </activity>
         <activity
+
                 android:name=".Activities.DashboardActivity"
                 android:label="@string/app_name"
                 android:launchMode="singleTask"
-                android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
+                android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar"
+                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
