--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.watchstoreapp">
+    package="com.example.watchstoreapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-            android:name=".container.BaseApplication"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+        android:name=".container.BaseApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.NavigationDrawerExampleNew">
+        <activity
+            android:name=".Activities.CategoryActivity"
+            android:exported="false"
+            android:label="@string/title_activity_category"
+            android:theme="@style/Theme.NavigationDrawerExampleNew" />
+        <activity
+            android:name=".Activities.SignUpActivity"
+            android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar"></activity>
+        <activity
+            android:name=".Activities.LoginActivity"
+            android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar"></activity>
+        <activity
+            android:name=".Activities.DashboardActivity"
+            android:exported="true"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.NavigationDrawerExampleNew">
-        <activity android:name=".Activities.SignUpActivity"
-                  android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
-        </activity>
-        <activity android:name=".Activities.LoginActivity"
-                  android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
-
-        </activity>
-        <activity
-
-                android:name=".Activities.DashboardActivity"
-                android:label="@string/app_name"
-                android:launchMode="singleTask"
-                android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar"
-                 android:exported="true">
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
-                android:name=".Activities.FullScreenActivity"
-                android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
-        </activity>
+            android:name=".Activities.FullScreenActivity"
+            android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar"></activity>
     </application>
 
 </manifest>
