--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,13 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.5'
 
     implementation 'com.beust:klaxon:5.5'
+    implementation 'com.github.a914-gowtham:compose-ratingbar:1.1.1'
+
+    implementation "com.google.accompanist:accompanist-pager:0.19.0"
+
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
+    implementation "androidx.compose.ui:ui-util:$compose_version"
+
 
 
 }
