--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,32 +8,34 @@
     <application
         android:name=".container.BaseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NavigationDrawerExampleNew">
+        android:theme="@style/splash">
         <activity
             android:name=".Activities.CategoryActivity"
             android:exported="true"
             android:label=""
             android:theme="@style/Theme.NavigationDrawerExampleNew">
 
-
-
         </activity>
         <activity
             android:name=".Activities.SignUpActivity"
-            android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar"></activity>
+            android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
+
+        </activity>
         <activity
             android:name=".Activities.LoginActivity"
-            android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar"></activity>
+            android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
+
+        </activity>
         <activity
             android:name=".Activities.DashboardActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:theme="@style/Theme.NavigationDrawerExampleNew.NoActionBar">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
